Fix application.properties and SecurityConfig for Render